Update tutorial to include Mongo section
