# api/swagger/swagger.yaml
@@ -1,12 +1,12 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
+  version: "0.0.2"
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -29,6 +29,34 @@ paths:
           description: An array of restaurants
           schema:
             $ref: "#/definitions/Restaurants"
+  /restaurants-mean:
+    x-swagger-router-controller: restaurants.mean
+    get:
+      summary: Displays all of the restaurants available from Mongo
+      description: Displays all of the restaurants available.  These restaurants are fantastic.
+      operationId: indexMean
+      responses:
+        200:
+          description: An array of restaurants
+          schema:
+            $ref: "#/definitions/Restaurants"
+    post:
+      summary: Create a new restaurant entry
+      description: Create a new restaurant entry
+      operationId: createMean
+      parameters:
+        - name: restaurant
+          in: body
+          required: true
+          description: Restaurant Object
+          schema:
+            $ref: "#/definitions/Restaurant"         
+      responses:
+        201:
+          description: OK
+          schema:
+            $ref: "#/definitions/Restaurant"
+    
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -65,7 +93,7 @@ definitions:
       name:
         type: string
       address:
-        type: string      
+        type: string
   HelloWorldResponse:
     required:
       - message
